Perkin-UAT/force-app/main/default/objects/SMAX_PS_Fault_Code__c/SMAX_PS_Fault_Code__c.object-meta.xml
<CustomObject>
    <description>Fault Codes for SMAX_PS_Fault_Codes</description>
    <label>Fault Code</label>
    <nameField>
        <label>Fault Code Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fault Codes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>