Perkin-UAT/force-app/main/default/objects/SMAX_PS_Fault_Code__c/fields/SMAX_PS_Code__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Code__c</fullName>
    <label>Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>