Perkin-UAT/force-app/main/default/objects/SMAX_PS_Fault_Code__c/fields/SMAX_PS_Code_Description__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Code_Description__c</fullName>
    <label>Code Description</label>
    <length>60</length>
    <type>Text</type>
</CustomField>