Perkin-UAT/force-app/main/default/objects/SMAX_PS_Fault_Code__c/fields/SMAX_PS_CodeGroupType__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_CodeGroupType__c</fullName>
    <formula>TEXT(SMAX_PS_Fault_Code_Group__r.SMAX_PS_Code_Group_Type__c)</formula>
    <label>Code Group Type</label>
    <type>Text</type>
</CustomField>