Perkin-UAT/force-app/main/default/objects/SMAX_PS_Fault_Code__c/fields/SMAX_PS_Complaint_Required__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Complaint_Required__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Complaint Required</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>