Perkin-UAT/force-app/main/default/objects/SMAX_PS_Fault_Code__c/fields/SMAX_PS_Completion_Code__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Completion_Code__c</fullName>
    <description>Completion Codes</description>
    <label>Completion Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>JC01 - Job Completed</fullName>
            </value>
            <value>
                <fullName>JC02 - Additional Parts Required</fullName>
            </value>
            <value>
                <fullName>JC03 - Confidence Testing</fullName>
            </value>
            <value>
                <fullName>JC04 - Customer Action Required</fullName>
            </value>
            <value>
                <fullName>JC05 - Defective Spare Parts</fullName>
            </value>
            <value>
                <fullName>JC06 - Further Troubleshooting Required</fullName>
            </value>
            <value>
                <fullName>JC07 - Insufficient Technical Information</fullName>
            </value>
            <value>
                <fullName>JC08 - Insufficient Time to Complete</fullName>
            </value>
            <value>
                <fullName>JC09 - Insufficient Training</fullName>
            </value>
            <value>
                <fullName>JC10 - Intermittent Problem</fullName>
            </value>
            <value>
                <fullName>JC12 - Parts Availability Delay</fullName>
            </value>
            <value>
                <fullName>JC13 - Tools &amp; Jigs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>