Perkin-UAT/force-app/main/default/objects/SMAX_PS_Fault_Code__c/fields/SMAX_PS_External_ID__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_External_ID__c</fullName>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>