Perkin-UAT/force-app/main/default/objects/SMAX_PS_Fault_Code__c/fields/SMAX_PS_Fault_Action__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Fault_Action__c</fullName>
    <label>Fault Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advised~AC01</fullName>
            </value>
            <value>
                <fullName>Adjusted~AC02</fullName>
            </value>
            <value>
                <fullName>Aligned~AC03</fullName>
            </value>
            <value>
                <fullName>Calibrated~AC04</fullName>
            </value>
            <value>
                <fullName>Cleaned~AC05</fullName>
            </value>
            <value>
                <fullName>Customer Action Req~AC06</fullName>
            </value>
            <value>
                <fullName>Follow Up Required~AC07</fullName>
            </value>
            <value>
                <fullName>Lubricated~AC08</fullName>
            </value>
            <value>
                <fullName>Monitored~AC09</fullName>
            </value>
            <value>
                <fullName>Rebuilt~AC10</fullName>
            </value>
            <value>
                <fullName>Reconfigured~AC11</fullName>
            </value>
            <value>
                <fullName>Referred to Specialist~AC12</fullName>
            </value>
            <value>
                <fullName>Reload Software~AC13</fullName>
            </value>
            <value>
                <fullName>Repaired Item~AC14</fullName>
            </value>
            <value>
                <fullName>Replaced~AC15</fullName>
            </value>
            <value>
                <fullName>Reseat / Reconnected~AC16</fullName>
            </value>
            <value>
                <fullName>Reset Power~AC17</fullName>
            </value>
            <value>
                <fullName>Resoldered~AC18</fullName>
            </value>
            <value>
                <fullName>Routine Maintenance~AC19</fullName>
            </value>
            <value>
                <fullName>SDB Modification~AC20</fullName>
            </value>
            <value>
                <fullName>Tested~AC21</fullName>
            </value>
            <value>
                <fullName>Tightened~AC22</fullName>
            </value>
            <value>
                <fullName>Trained / Instructed~AC23</fullName>
            </value>
            <value>
                <fullName>Updated to Latest Vers~AC24</fullName>
            </value>
            <value>
                <fullName>Upgraded~AC25</fullName>
            </value>
            <value>
                <fullName>Verified~AC26</fullName>
            </value>
            <value>
                <fullName>Scheduled Event~AC27</fullName>
            </value>
            <value>
                <fullName>Reprogrammed~AC28</fullName>
            </value>
            <value>
                <fullName>Return to Vendor~AC30</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>