Perkin-UAT/force-app/main/default/objects/SMAX_PS_Fault_Code__c/fields/SMAX_PS_Fault_Code_Group__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Fault_Code_Group__c</fullName>
    <label>Fault Code Group</label>
    <referenceTo>SMAX_PS_Fault_Code_Group__c</referenceTo>
    <relationshipLabel>Fault Codes</relationshipLabel>
    <relationshipName>Fault_Codes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>