Perkin-UAT/force-app/main/default/objects/SMAX_PS_Fault_Code__c/fields/SMAX_PS_Installation_Code__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Installation_Code__c</fullName>
    <description>Installation Codes</description>
    <label>Installation Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IN01 - Application Problems</fullName>
            </value>
            <value>
                <fullName>IN02 - Computer problem PKI</fullName>
            </value>
            <value>
                <fullName>IN03 - Customer site unready or problem</fullName>
            </value>
            <value>
                <fullName>IN04 - Delivery Incomplete</fullName>
            </value>
            <value>
                <fullName>IN05 - Installation with no problem</fullName>
            </value>
            <value>
                <fullName>IN06 - Major Adjustment</fullName>
            </value>
            <value>
                <fullName>IN07 - Major parts replacement</fullName>
            </value>
            <value>
                <fullName>IN08 - Major repair carried out</fullName>
            </value>
            <value>
                <fullName>IN09 - Minor installation problem-no follow up</fullName>
            </value>
            <value>
                <fullName>IN10 - Sales Order Incorrect/Incomplete</fullName>
            </value>
            <value>
                <fullName>IN11 - Shipping Damage</fullName>
            </value>
            <value>
                <fullName>IN12 - Accessory Problem</fullName>
            </value>
            <value>
                <fullName>IN13 - Software Issue PKI</fullName>
            </value>
            <value>
                <fullName>IN14 - Software Issue non-PKI</fullName>
            </value>
            <value>
                <fullName>IN15 - Computer problem non-PKI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>