Perkin-UAT/force-app/main/default/objects/SMAX_PS_Fault_Code__c/fields/SMAX_PS_IsComplaintRequired__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_IsComplaintRequired__c</fullName>
    <formula>SMAX_PS_Complaint_Required__c = 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Complaint Required</label>
    <type>Checkbox</type>
</CustomField>