Perkin-UAT/force-app/main/default/objects/SMAX_PS_Fault_Code__c/fields/SMAX_PS_Problem_Code_Required__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Problem_Code_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the selection of this Fault Code requires a Problem Code to also be selected.</description>
    <inlineHelpText>Indicates whether the selection of this Fault Code requires a Problem Code to also be selected.</inlineHelpText>
    <label>Is Problem Code Required</label>
    <type>Checkbox</type>
</CustomField>