Perkin-UAT/force-app/main/default/objects/SMAX_PS_Fault_Code__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SMAX_PS_External_ID__c</columns>
    <columns>SMAX_PS_Code_Family__c</columns>
    <columns>SMAX_PS_Fault_Code_Group__c</columns>
    <columns>SMAX_PS_CodeGroupType__c</columns>
    <columns>SMAX_PS_Code_Group__c</columns>
    <columns>SMAX_PS_Code__c</columns>
    <columns>SMAX_PS_Code_Description__c</columns>
    <columns>SMAX_PS_IsComplaintRequired__c</columns>
    <columns>SMAX_PS_Problem_Code_Required__c</columns>
    <columns>SMAX_PS_Completion_Code__c</columns>
    <columns>SMAX_PS_Installation_Code__c</columns>
    <columns>SMAX_PS_Fault_Action__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>Shipping</value>
    </filters>
    <label>All</label>
</ListView>